--- a/Moba/class_libuv/class_libuv/class_libuv/class_libuv.vcxproj.filters
+++ b/Moba/class_libuv/class_libuv/class_libuv/class_libuv.vcxproj.filters
@@ -20,11 +20,11 @@
     <Filter Include="3rd\libuv\src\win">
       <UniqueIdentifier>{bf397aa3-1542-4fe8-a2c2-5817ff9b22bb}</UniqueIdentifier>
     </Filter>
-    <Filter Include="3rd\libuv\src\unix">
-      <UniqueIdentifier>{6b858ce3-5a9b-4405-b62e-151ab2a865e8}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\main_timer.c">
+      <Filter>src</Filter>
+    </ClCompile>
     <ClCompile Include="..\3rd\libuv\src\fs-poll.c">
       <Filter>3rd\libuv\src</Filter>
     </ClCompile>
@@ -118,11 +118,41 @@
     <ClCompile Include="..\3rd\libuv\src\win\winsock.c">
       <Filter>3rd\libuv\src\win</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\main_udp.c">
+    <ClCompile Include="..\src\time_list.c">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\3rd\libuv\src\heap-inl.h">
+      <Filter>3rd\libuv\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\3rd\libuv\src\queue.h">
+      <Filter>3rd\libuv\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\3rd\libuv\src\uv-common.h">
+      <Filter>3rd\libuv\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\3rd\libuv\src\win\atomicops-inl.h">
+      <Filter>3rd\libuv\src\win</Filter>
+    </ClInclude>
+    <ClInclude Include="..\3rd\libuv\src\win\handle-inl.h">
+      <Filter>3rd\libuv\src\win</Filter>
+    </ClInclude>
+    <ClInclude Include="..\3rd\libuv\src\win\internal.h">
+      <Filter>3rd\libuv\src\win</Filter>
+    </ClInclude>
+    <ClInclude Include="..\3rd\libuv\src\win\req-inl.h">
+      <Filter>3rd\libuv\src\win</Filter>
+    </ClInclude>
+    <ClInclude Include="..\3rd\libuv\src\win\stream-inl.h">
+      <Filter>3rd\libuv\src\win</Filter>
+    </ClInclude>
+    <ClInclude Include="..\3rd\libuv\src\win\winapi.h">
+      <Filter>3rd\libuv\src\win</Filter>
+    </ClInclude>
+    <ClInclude Include="..\3rd\libuv\src\win\winsock.h">
+      <Filter>3rd\libuv\src\win</Filter>
+    </ClInclude>
     <ClInclude Include="..\3rd\libuv\include\android-ifaddrs.h">
       <Filter>3rd\libuv\include</Filter>
     </ClInclude>
@@ -168,35 +198,8 @@
     <ClInclude Include="..\3rd\libuv\include\uv-win.h">
       <Filter>3rd\libuv\include</Filter>
     </ClInclude>
-    <ClInclude Include="..\3rd\libuv\src\heap-inl.h">
-      <Filter>3rd\libuv\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\3rd\libuv\src\queue.h">
-      <Filter>3rd\libuv\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\3rd\libuv\src\uv-common.h">
-      <Filter>3rd\libuv\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\3rd\libuv\src\win\atomicops-inl.h">
-      <Filter>3rd\libuv\src\win</Filter>
-    </ClInclude>
-    <ClInclude Include="..\3rd\libuv\src\win\handle-inl.h">
-      <Filter>3rd\libuv\src\win</Filter>
-    </ClInclude>
-    <ClInclude Include="..\3rd\libuv\src\win\internal.h">
-      <Filter>3rd\libuv\src\win</Filter>
-    </ClInclude>
-    <ClInclude Include="..\3rd\libuv\src\win\req-inl.h">
-      <Filter>3rd\libuv\src\win</Filter>
-    </ClInclude>
-    <ClInclude Include="..\3rd\libuv\src\win\stream-inl.h">
-      <Filter>3rd\libuv\src\win</Filter>
-    </ClInclude>
-    <ClInclude Include="..\3rd\libuv\src\win\winapi.h">
-      <Filter>3rd\libuv\src\win</Filter>
-    </ClInclude>
-    <ClInclude Include="..\3rd\libuv\src\win\winsock.h">
-      <Filter>3rd\libuv\src\win</Filter>
+    <ClInclude Include="..\src\time_list.h">
+      <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
